<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/TextViewTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:text="@string/misturnos"
                android:textSize="25dp"
                android:textStyle="bold"
                android:width="60dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout1" 
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewLunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunes"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextViewLu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout2" 
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewMartes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/martes"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextViewMa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextViewMiercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miercoles"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextViewMi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextViewJueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jueves"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextViewJu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout5" 
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewViernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viernes"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextViewVi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout6"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextViewSabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sabado"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextViewSa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout7"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextViewDomingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domingo"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextViewDo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>