<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/TextViewTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:text="@string/perfil"
                android:textSize="25dp"
                android:textStyle="bold"
                android:width="60dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout1" >

            <TextView
                android:id="@+id/TextView_Nombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombres"
                android:width="60dp" />

            <EditText
                android:id="@+id/EditTextNombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout2" >

            <TextView
                android:id="@+id/TextView_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:width="60dp" />

            <EditText
                android:id="@+id/EditTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout3" >

            <TextView
                android:id="@+id/TextView_Telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:width="60dp" />

            <EditText
                android:id="@+id/EditTextTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout4" >

            <TextView
                android:id="@+id/TextView_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:width="60dp" />

            <EditText
                android:id="@+id/EditTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout5" >

            <TextView
                android:id="@+id/TextView_Confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_password"
                android:width="60dp" />

            <EditText
                android:id="@+id/EditTextConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout6"
            android:gravity="center" >

            <Button
                android:id="@+id/Button_Actualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="actualizar"
                android:text="@string/actualizar" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>